# robot_scanner_simulation

./: .gitignore  Dockerfile  Package scan_table_interfaces.txt  README.md  StateMachine.txt  module_description.txt  run_ros2_docker.sh  run_ros2_docker_no_display.sh
doc/: StateMachine.md  module_description.md
src/hardware_simulation/: package.xml  setup.cfg  setup.py
src/hardware_simulation/hardware_simulation/: item_mock.py  pusher_mock.py  robot_mock.py  scanner_mock.py  table_sensor_mock.py
src/robot_scanner_bringup/: CMakeLists.txt  package.xml
src/robot_scanner_bringup/launch/: bringup.launch.py
src/scan_table_interfaces/: CMakeLists.txt  package.xml
src/scan_table_interfaces/msg/: Barcode.msg  ItemState.msg  ManagerState.msg  RobotStatus.msg  TableOccupancy.msg
src/scan_table_interfaces/srv/: MoveItem.srv  MoveRobot.srv  Push.srv  SpawnItem.srv  TriggerScan.srv
src/scan_table_manager/: CMakeLists.txt  package.xml
src/scan_table_manager/include/scan_table_manager/: scan_table_manager.hpp
src/scan_table_manager/launch/: scan_table_manager.launch.py
src/scan_table_manager/src/: scan_table_manager.cpp
src/scanning_process_monitor/: package.xml  setup.cfg  setup.py
src/scanning_process_monitor/scanning_process_monitor/: monitor.py
