<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_scanner_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the full robot scanner simulation system.</description>
  <maintainer email="jinyang@todo.todo">jinyang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hardware_simulation</exec_depend>
  <exec_depend>scan_table_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
